--- a/view/dom.html
+++ b/view/dom.html
@@ -1,28 +1,42 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JAVASCRIPT</title>
-    <script src="../asset/js/14-dom.js"></script>
-</head>
-<body>
+    <script src="../asset/js/14-dom.js" defer></script>
+    <link rel="stylesheet" href="../asset/css/dom.css" />
+  </head>
+  <body>
     <h1 id="main-title">La manipulation du DOM en Javascript</h1>
-    <h2 class="title">Quelques propriétés CSS</h2>
-    <h2 class="title">Pas faciles le Javascript</h2>
+    <h2 class="title" id="title2">Quelques propriétés CSS</h2>
+    <h2 class="title txt-uppercase" id="verified">Pas faciles le Javascript</h2>
 
-    <div id="first-paragraphe">
-        <p > Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui accusantium harum placeat? Cum odio dignissimos omnis, amet quaerat vero mollitia nam. Ipsum, id repudiandae unde veniam sunt cumque corrupti aspernatur?
+    <div id="paragraphe-container">
+        <h2>les paragraphes</h2>
+      <p id="paragraphe-test" class="txt-uppercase">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui accusantium
+        harum placeat? Cum odio dignissimos omnis, amet quaerat vero mollitia
+        nam. Ipsum, id repudiandae unde veniam sunt cumque corrupti aspernatur?
+      </p>
 
-        </p>
-
-        <p>
-        Enim velit fuga earum commodi veritatis sit voluptate delectus suscipit porro accusamus modi, asperiores eum corporis ullam at a possimus. Praesentium quibusdam reprehenderit asperiores mollitia. Fuga perspiciatis ab labore rerum.
-        </p>
-        <p>
-        Harum iure voluptatum veritatis blanditiis, aut accusantium quibusdam sit maxime culpa, unde dolorum, perferendis dolor esse quidem! Facilis rem omnis mollitia voluptatibus, voluptate assumenda, iusto deserunt quidem cumque temporibus quisquam!    
-   
-        </p>
+      <p>
+        Enim velit fuga earum commodi veritatis sit voluptate delectus suscipit
+        porro accusamus modi, asperiores eum corporis ullam at a possimus.
+        Praesentium quibusdam reprehenderit asperiores mollitia. Fuga
+        perspiciatis ab labore rerum.
+      </p>
+      <p id="title3">
+        Harum iure voluptatum veritatis blanditiis, aut accusantium quibusdam
+        sit maxime culpa, unde dolorum, perferendis dolor esse quidem! Facilis
+        rem omnis mollitia voluptatibus, voluptate assumenda, iusto deserunt
+        quidem cumque temporibus quisquam!
+      </p>
     </div>
-</body>
+    <!-- liste HTML -->
+    <!-- les films avengers -->
+
+    <!-- ecouterus sur le ul -->
+    <!-- li cliqué qui change de taille -->
+  </body>
 </html>
