dossier complet js

--- a/view/list.html
+++ b/view/list.html
@@ -7,10 +7,10 @@
     <script src="../asset/js/16-practice-list.js" defer></script>
 </head>
 <body>
+    <div id="container" >
     <h1>Liste des films avengers</h1>
-    <h2 id="look">Affichage des films</h2>
-    <div >
-        <ul id="liste">
+    
+        <ul id="change">
             <li>iron Man</li>
             <li>Hulk</li>
             <li> Thor</li>
